--- a/12_Step12.md
+++ b/12_Step12.md
@@ -107,7 +107,7 @@ In `provider/product/product.pact.test.js`:
 
 ```javascript
 //replace
-pactBrokerUrl: process.env.PACT_BROKER_BASE_URL || "http://localhost:8000",
+pactBrokerUrl: process.env.PACT_BROKER_BASE_URL || "http://127.0.0.1:8000",
 pactBrokerUsername: process.env.PACT_BROKER_USERNAME || "pact_workshop",
 pactBrokerPassword: process.env.PACT_BROKER_PASSWORD || "pact_workshop",
 
