--- a/12_Step12.md
+++ b/12_Step12.md
@@ -87,7 +87,7 @@ Then publish your pacts:
 ```
 ❯ npm run pact:publish --prefix consumer
 
-> pact-broker publish ./pacts --consumer-app-version="$(npx --yes absolute-version)" --auto-detect-version-properties
+> pact-broker publish ./pacts --consumer-app-version="1.0.0" --auto-detect-version-properties
 
 Updated FrontendWebsite version 71c1b7-step12+71c1b7.SNAPSHOT.SB-AS-G7GM9F7 with branch step12
 Pact successfully published for FrontendWebsite version 71c1b7-step12+71c1b7.SNAPSHOT.SB-AS-G7GM9F7 and provider ProductService.
